tests/ui/compile-fail/pinned_drop/unsafe.stderr
error: implementing the trait `PinnedDrop` via `#[pinned_drop]` is not unsafe
 --> tests/ui/compile-fail/pinned_drop/unsafe.rs:8:1
  |
8 | unsafe impl PinnedDrop for Foo {
  | ^^^^^^
